examples/test/testpolicy16220.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16220
  namespace: namespace239
spec:
  podSelector:
    matchLabels:
      key29: value15
      key15: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value28
      podSelector:
        matchLabels:
          key2: value49
          key30: value14
